--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <a href="#" class="header-logo"></a>
             <nav>
               <ul class="header-nav">
-                <li><a href="#" class="active">Главная</a></li>
-                <li><a href="#">Меню</a></li>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#" class="active">Меню</a></li>
                 <li><a href="#">О нас</a></li>
                 <li><a href="#">Контакты</a></li>
               </ul>
@@ -40,9 +40,72 @@
         <li><a href="#">Главная</a></li>
         <li><a href="#">Меню</a></li>
       </ul>
-      <h1 class="tittle">Наше меню</h1>
+      <h1 class="tittle">Наше Меню</h1>
       <p class="description">Выбирай из предложенного ассортимента и мы доставим блюдо в течении часа</p>
     </div>
   </div>
+  <main>
+    <div class="banner">
+      <div class="container">
+        <div class="banner-box">
+          <h2 class="banner-title">
+            <span>скидка</span>
+            -30%
+          </h2>
+          <p class="banner-text">Только при&nbsp;покупке 3-х и более позиций, мы&nbsp;дарим скидку. Акции не&nbsp;суммируются.</p>
+          <a href="#" class="banner-link">купить сейчас</a>
+        </div>
+      </div>
+    </div>
+    <section class="menu">
+      <div class="container">
+        <div class="menu-header">
+          <h2 class="menu-title">
+            Бургеры
+          </h2>
+          <select class="menu-select">
+            <option value="">Сортировать</option>
+            <option value="up">По возрастанию</option>
+            <option value="down">По убыванию</option>
+          </select>
+        </div>
+        <div class="menu-grid">
+          <div class="menu-grid-item">
+            <div class="menu-grid-cover">
+              <img src="images/menu/01.jpg" alt="Острый бургер">
+            </div>
+            <p class="menu-grid-title">Острый бургер</p>
+            <p class="menu-grid-price">$26</p>
+            <button type="button" class="menu-grid-btn">
+              <span class="menu-grid-icon"></span>
+              <span class="menu-grid-text">купить</span>
+            </button>
+          </div> 
+          <div class="menu-grid-item">
+            <div class="menu-grid-cover">
+              <img src="images/menu/02.jpg" alt="Острый бургер">
+            </div>
+            <p class="menu-grid-title">Острый бургер</p>
+            <p class="menu-grid-price">$26</p>
+            <button type="button" class="menu-grid-btn">
+              <span class="menu-grid-icon"></span>
+              <span class="menu-grid-text">купить</span>
+            </button>
+          </div>
+          <div class="menu-grid-item">
+            <div class="menu-grid-cover">
+              <img src="images/menu/01.jpg" alt="Острый бургер">
+            </div>
+            <p class="menu-grid-title">Острый бургер</p>
+            <p class="menu-grid-price">$26</p>
+            <button type="button" class="menu-grid-btn">
+              <span class="menu-grid-icon"></span>
+              <span class="menu-grid-text">купить</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
    </body>
 </html>
