--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <div class="menu-grid-cover">
               <img src="images/menu/02.jpg" alt="Острый бургер">
             </div>
-            <p class="menu-grid-title">Острый бургер</p>
-            <p class="menu-grid-price">$26</p>
+            <p class="menu-grid-title">Гриль Бургер</p>
+            <p class="menu-grid-price">$16</p>
             <button type="button" class="menu-grid-btn">
               <span class="menu-grid-icon"></span>
               <span class="menu-grid-text">купить</span>
@@ -96,8 +96,8 @@
             <div class="menu-grid-cover">
               <img src="images/menu/03.jpg" alt="Острый бургер">
             </div>
-            <p class="menu-grid-title">Острый бургер</p>
-            <p class="menu-grid-price">$26</p>
+            <p class="menu-grid-title">Бургер Гигант</p>
+            <p class="menu-grid-price">$37</p>
             <button type="button" class="menu-grid-btn">
               <span class="menu-grid-icon"></span>
               <span class="menu-grid-text">купить</span>
@@ -107,8 +107,8 @@
             <div class="menu-grid-cover">
               <img src="images/menu/04.jpg" alt="Острый бургер">
             </div>
-            <p class="menu-grid-title">Острый бургер</p>
-            <p class="menu-grid-price">$26</p>
+            <p class="menu-grid-title">Бургер с курицей</p>
+            <p class="menu-grid-price">$18</p>
             <button type="button" class="menu-grid-btn">
               <span class="menu-grid-icon"></span>
               <span class="menu-grid-text">купить</span>
@@ -118,8 +118,8 @@
             <div class="menu-grid-cover">
               <img src="images/menu/05.jpg" alt="Острый бургер">
             </div>
-            <p class="menu-grid-title">Острый бургер</p>
-            <p class="menu-grid-price">$26</p>
+            <p class="menu-grid-title">Бургер с курицей</p>
+            <p class="menu-grid-price">$9</p>
             <button type="button" class="menu-grid-btn">
               <span class="menu-grid-icon"></span>
               <span class="menu-grid-text">купить</span>
@@ -129,8 +129,48 @@
             <div class="menu-grid-cover">
               <img src="images/menu/06.jpg" alt="Острый бургер">
             </div>
-            <p class="menu-grid-title">Острый бургер</p>
-            <p class="menu-grid-price">$26</p>
+            <p class="menu-grid-title">Тройной бургер</p>
+            <p class="menu-grid-price">$7</p>
+            <button type="button" class="menu-grid-btn">
+              <span class="menu-grid-icon"></span>
+              <span class="menu-grid-text">купить</span>
+            </button>
+          </div>
+        </div>
+        <div class="menu-header">
+          <h2 class="menu-title">
+            Дополнительно
+          </h2>
+          </div>
+        <div class="menu-grid">
+          <div class="menu-grid-item">
+            <div class="menu-grid-cover">
+              <img src="images/menu/07.jpg" alt="Острый бургер">
+            </div>
+            <p class="menu-grid-title">Сэндвич</p>
+            <p class="menu-grid-price">$3</p>
+            <button type="button" class="menu-grid-btn">
+              <span class="menu-grid-icon"></span>
+              <span class="menu-grid-text">купить</span>
+            </button>
+          </div> 
+          <div class="menu-grid-item">
+            <div class="menu-grid-cover">
+              <img src="images/menu/08.jpg" alt="Острый бургер">
+            </div>
+            <p class="menu-grid-title">Картошка Фри</p>
+            <p class="menu-grid-price">$5</p>
+            <button type="button" class="menu-grid-btn">
+              <span class="menu-grid-icon"></span>
+              <span class="menu-grid-text">купить</span>
+            </button>
+          </div>
+          <div class="menu-grid-item">
+            <div class="menu-grid-cover">
+              <img src="images/menu/09.jpg" alt="Острый бургер">
+            </div>
+            <p class="menu-grid-title">Хот-Дог</p>
+            <p class="menu-grid-price">$7</p>
             <button type="button" class="menu-grid-btn">
               <span class="menu-grid-icon"></span>
               <span class="menu-grid-text">купить</span>
