--- a/menu.html
+++ b/menu.html
@@ -15,6 +15,9 @@
   <header id="headerTop">
     <div class="container">
         <div class="header">
+          <div class="header-burger">
+            <button class="burger" onclick="openModal()"></button>
+          </div>            
           <div class="header-item">
             <a href="index.html" class="header-logo"></a>
             <nav>
@@ -139,6 +142,10 @@
             </button>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="menu">
+      <div class="container">
         <div class="menu-header">
           <h2 class="menu-title">
             Дополнительно
@@ -196,7 +203,7 @@
               <li><a href="#">Методы оплаты</a></li>
               <li><a href="#">Контакты</a></li>
           </ul>
-          <ul class="footer-list footer-list-tel">
+          <ul class="footer-list footer-list-tel footer-tel-mobil ">
             <li>
               <a href="tel:+79007871313">+ 7 900 787 13-13</a>
             </li>
@@ -233,6 +240,15 @@
     </div>
 </footer>
 <a href="#headerTop" class="button-up hidden" id="btnUp">Наверх</a>
+<div class="modal" id="modal">
+  <ul class="header-nav" id="modal">
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="#" class="active">Меню</a></li>
+    <li><a href="#">О нас</a></li>
+    <li><a href="#">Контакты</a></li>
+  </ul>
+  <button class="burger-close" onclick="closeModal()"></button>
+</div>
 <script> 
     // Smooth Scroll
       const links = document.querySelectorAll(".banner-link");
@@ -273,8 +289,14 @@
                document.getElementById('btnUp').className = 'button-up hidden';
            }
        }
+       // Menu
+       function openModal() {
+           document.getElementById("modal").style.top = "0px";
+       }
 
-
+       function closeModal() {
+           document.getElementById("modal").style.top = "-400px";
+       }
 </script>
    </body>
 </html>
