--- a/menu.html
+++ b/menu.html
@@ -144,7 +144,7 @@
         </div>
       </div>
     </section>
-    <section class="menu">
+    <section class="menu menu-other">
       <div class="container">
         <div class="menu-header">
           <h2 class="menu-title">
