--- a/menu.html
+++ b/menu.html
@@ -112,7 +112,7 @@
             <div class="menu-grid-cover">
               <img src="images/menu/04.jpg" alt="Острый бургер">
             </div>
-            <p class="menu-grid-title">Бургер с курицей</p>
+            <p class="menu-grid-title">Бургер с&nbsp;курицей</p>
             <p class="menu-grid-price">$18</p>
             <button type="button" class="menu-grid-btn">
               <span class="menu-grid-icon"></span>
@@ -203,7 +203,7 @@
               <li><a href="#">Методы оплаты</a></li>
               <li><a href="#">Контакты</a></li>
           </ul>
-          <ul class="footer-list footer-list-tel footer-tel-mobil ">
+          <ul class="footer-list footer-list-tel footer-tel-mobile">
             <li>
               <a href="tel:+79007871313">+ 7 900 787 13-13</a>
             </li>
@@ -282,7 +282,7 @@
            behavior: "smooth"
        });
        }
-       function scrollFunction(){
+       function scrollFunction() {
            if ( document.body.scrollTop > 1000 || document.documentElement.scrollTop > 1000){
                document.getElementById('btnUp').className = 'button-up visible';
            } else {
